# SkyPro_homework_web_basics

./: .gitignore  README.md  main.py  pyproject.toml
categories/: categories.html
contacts/: contacts.html
index/: index.html
orders/: orders.html
